--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,43 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      text-align: center;
-    }
-    #quoteDisplay {
-      margin: 20px auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      max-width: 400px;
-      background-color: #f9f9f9;
-    }
-    input {
-      margin: 5px;
-      padding: 10px;
-      width: 80%;
-    }
-    button {
-      padding: 10px 20px;
-      margin: 10px;
-      cursor: pointer;
-    }
-  </style>
+  <title>DOM Manipulation</title>
 </head>
 <body>
-  <h1>Dynamic Quote Generator</h1>
-  <div id="quoteDisplay">Click the button to display a quote!</div>
-  <button id="newQuote">Show New Quote</button>
-
-  <div>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button id="addQuoteButton">Add Quote</button>
-  </div>
+  <h1>Welcome to DOM Manipulation</h1>
+  <button id="changeColorButton">Change Background Color</button>
 
   <script src="script.js"></script>
 </body>
