--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
   <h1>Welcome to DOM Manipulation</h1>
-  <button id="changeColorButton">Change Background Color</button>
+
+  <div>
+    <p id="quoteText">Your quote will appear here.</p>
+    <p id="quoteCategory">Category: </p>
+  </div>
+
+  <button id="changeColorButton">Show New Quote</button>
 
   <script src="script.js"></script>
 </body>
